<resources>
    <string name="app_name" translatable="false">Formulario_aplicacion</string>
    <string name="introducir_datos_dni">Introducir datos DNI</string>
    <string name="apellido">Apellido</string>
    <string name="apellido2">Apellido2</string>
    <string name="nombre">Nombre</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="crear_dni">Crear DNI</string>
    <string name="desp" translatable="false">Desp</string>
    <string name="numero_dni">Numero DNI</string>
    <string name="valido_hasta">Valido hasta</string>
    <string name="otros_posibles_dnis">Otros posibles DNIs</string>
    <string name="dni_generado">DNI generado:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>