<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introducir_datos_dni"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101"
            android:textSize="24sp"
            android:id="@+id/tituloMainTextView"
            app:layout_constraintHorizontal_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="21dp" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="vertical"
            app:layout_constraintGuide_end="21dp" />

    <EditText
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/apellidoTextEdit"
            app:layout_constraintTop_toBottomOf="@+id/tituloMainTextView"
            android:hint="@string/apellido"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            style="@style/StyledComponent"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

    <EditText
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/apellido2TextEdit"
            app:layout_constraintTop_toBottomOf="@+id/apellidoTextEdit"
            android:hint="@string/apellido2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            style="@style/StyledComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.484"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

    <EditText
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/nombreTextEdit"
            app:layout_constraintTop_toBottomOf="@+id/apellido2TextEdit"
            android:hint="@string/nombre"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            style="@style/StyledComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sexoRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/nombreTextEdit"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            style="@style/StyledComponent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

        <RadioButton
                android:text="@string/hombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hombreRadioButton"
                tools:ignore="VisualLintButtonSize" />

        <RadioButton
                android:text="@string/mujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mujerRadioButton"
                tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <Button
            android:text="@string/crear_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/crearDNIButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="96dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/fechaNaciTextEdit"
            style="@style/StyledComponent"
            app:layout_constraintTop_toBottomOf="@+id/sexoRadioGroup"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:hint="@string/fecha_nacimiento"
            android:focusable="false" />

</androidx.constraintlayout.widget.ConstraintLayout>